--- a/Lab7P3_GerardoCano.vcxproj
+++ b/Lab7P3_GerardoCano.vcxproj
@@ -128,6 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Lab7P3_GerardoCano.cpp" />
+    <ClCompile Include="Producto.cpp" />
+    <ClCompile Include="Resena.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Producto.h" />
+    <ClInclude Include="Resena.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
