--- a/Lab7P3_GerardoCano.vcxproj.filters
+++ b/Lab7P3_GerardoCano.vcxproj.filters
@@ -24,12 +24,30 @@
     <ClCompile Include="Producto.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Libro.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Pelicula.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Disco.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resena.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Producto.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Libro.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Pelicula.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Disco.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
